CATTY-412 Rename When project started

--- a/src/Catty/Resources/Localization/bn.lproj/Localizable.strings
+++ b/src/Catty/Resources/Localization/bn.lproj/Localizable.strings
@@ -1817,7 +1817,7 @@
 "When background changes to" = "যখন ব্যাকগ্রাউন্ডে পরিবর্তন হয়";
 
 /* No comment provided by engineer. */
-"When project started" = "যখন প্রজেক্ট শুরু";
+"When project starts" = "যখন প্রজেক্ট শুরু";
 
 /* No comment provided by engineer. */
 "When stage is tapped" = "যখন পর্যায়টি টেপ করা হয়";
