--- a/src/Catty/Resources/Localization/de.lproj/Localizable.strings
+++ b/src/Catty/Resources/Localization/de.lproj/Localizable.strings
@@ -1817,7 +1817,7 @@
 "When background changes to" = "Wenn der Hintergrund wechselt zu";
 
 /* No comment provided by engineer. */
-"When project started" = "Wenn Projekt gestartet";
+"When project starts" = "Wenn Projekt gestartet";
 
 /* No comment provided by engineer. */
 "When stage is tapped" = "Wenn der Bildschirm berührt wird";
