--- a/src/Catty/Resources/Localization/es.lproj/Localizable.strings
+++ b/src/Catty/Resources/Localization/es.lproj/Localizable.strings
@@ -1817,7 +1817,7 @@
 "When background changes to" = "Cuando el fondo cambia a";
 
 /* No comment provided by engineer. */
-"When project started" = "Cuando el proyecto comience";
+"When project starts" = "Cuando el proyecto comience";
 
 /* No comment provided by engineer. */
 "When stage is tapped" = "Cuando se toca la pantalla";
