--- a/src/Catty/Resources/Localization/fr.lproj/Localizable.strings
+++ b/src/Catty/Resources/Localization/fr.lproj/Localizable.strings
@@ -1817,7 +1817,7 @@
 "When background changes to" = "Lorsque le fond change pour";
 
 /* No comment provided by engineer. */
-"When project started" = "When project started";
+"When project starts" = "When project starts";
 
 /* No comment provided by engineer. */
 "When stage is tapped" = "Lorsque l’écran est touché";
