--- a/src/Catty/Resources/Localization/id.lproj/Localizable.strings
+++ b/src/Catty/Resources/Localization/id.lproj/Localizable.strings
@@ -1817,7 +1817,7 @@
 "When background changes to" = "Saat latar belakang berubah";
 
 /* No comment provided by engineer. */
-"When project started" = "When project started";
+"When project starts" = "When project starts";
 
 /* No comment provided by engineer. */
 "When stage is tapped" = "Saat layar tersentuh";
