--- a/src/Catty/Resources/Localization/it.lproj/Localizable.strings
+++ b/src/Catty/Resources/Localization/it.lproj/Localizable.strings
@@ -1817,7 +1817,7 @@
 "When background changes to" = "Quando lo sfondo impostato a";
 
 /* No comment provided by engineer. */
-"When project started" = "Quando il progetto è iniziato";
+"When project starts" = "Quando il progetto è iniziato";
 
 /* No comment provided by engineer. */
 "When stage is tapped" = "Quando lo schermo viene toccato";
