--- a/src/Catty/Resources/Localization/ja.lproj/Localizable.strings
+++ b/src/Catty/Resources/Localization/ja.lproj/Localizable.strings
@@ -1817,7 +1817,7 @@
 "When background changes to" = "背景を変更した場合";
 
 /* No comment provided by engineer. */
-"When project started" = "When project started";
+"When project starts" = "When project starts";
 
 /* No comment provided by engineer. */
 "When stage is tapped" = "画面にタッチした時";
