--- a/src/Catty/Resources/Localization/pl.lproj/Localizable.strings
+++ b/src/Catty/Resources/Localization/pl.lproj/Localizable.strings
@@ -1817,7 +1817,7 @@
 "When background changes to" = "Kiedy tło zmieni się na";
 
 /* No comment provided by engineer. */
-"When project started" = "Kiedy projekt startuje";
+"When project starts" = "Kiedy projekt startuje";
 
 /* No comment provided by engineer. */
 "When stage is tapped" = "Kiedy dotknięto ekran";
