--- a/src/Catty/Resources/Localization/ta.lproj/Localizable.strings
+++ b/src/Catty/Resources/Localization/ta.lproj/Localizable.strings
@@ -1817,7 +1817,7 @@
 "When background changes to" = "பின்னணி மாறும்போது";
 
 /* No comment provided by engineer. */
-"When project started" = "திட்டம் தொடங்கியபோது";
+"When project starts" = "திட்டம் தொடங்கியபோது";
 
 /* No comment provided by engineer. */
 "When stage is tapped" = "மேடை தட்டும்போது";
