--- a/src/Catty/Resources/Localization/tr.lproj/Localizable.strings
+++ b/src/Catty/Resources/Localization/tr.lproj/Localizable.strings
@@ -1817,7 +1817,7 @@
 "When background changes to" = "Arka plan değiştiğinde";
 
 /* No comment provided by engineer. */
-"When project started" = "Proje başladığında";
+"When project starts" = "Proje başladığında";
 
 /* No comment provided by engineer. */
 "When stage is tapped" = "Ekrana dokunduğunda";
