--- a/src/Catty/Resources/Localization/ur.lproj/Localizable.strings
+++ b/src/Catty/Resources/Localization/ur.lproj/Localizable.strings
@@ -1817,7 +1817,7 @@
 "When background changes to" = "جب پس منظر کو تبدیل کرتا ہے";
 
 /* No comment provided by engineer. */
-"When project started" = "جب منصوبے شروع ہوگئے";
+"When project starts" = "جب منصوبے شروع ہوگئے";
 
 /* No comment provided by engineer. */
 "When stage is tapped" = "جب اسٹیج  ٹیپ کیا جاتا ہے";
