--- a/src/Catty/Resources/Localization/zh-Hans.lproj/Localizable.strings
+++ b/src/Catty/Resources/Localization/zh-Hans.lproj/Localizable.strings
@@ -1817,7 +1817,7 @@
 "When background changes to" = "当背景更改为";
 
 /* No comment provided by engineer. */
-"When project started" = "项目启动时";
+"When project starts" = "项目启动时";
 
 /* No comment provided by engineer. */
 "When stage is tapped" = "当屏幕被点击";
