--- a/src/Catty/Resources/Localization/bs.lproj/Localizable.strings
+++ b/src/Catty/Resources/Localization/bs.lproj/Localizable.strings
@@ -1817,7 +1817,7 @@
 "When background changes to" = "Kada se pozadina promijeni na";
 
 /* No comment provided by engineer. */
-"When project started" = "When project started";
+"When project starts" = "When project starts";
 
 /* No comment provided by engineer. */
 "When stage is tapped" = "When stage is tapped";
