--- a/src/Catty/Resources/Localization/cs.lproj/Localizable.strings
+++ b/src/Catty/Resources/Localization/cs.lproj/Localizable.strings
@@ -1817,7 +1817,7 @@
 "When background changes to" = "Když se pozadí změní na";
 
 /* No comment provided by engineer. */
-"When project started" = "When project started";
+"When project starts" = "When project starts";
 
 /* No comment provided by engineer. */
 "When stage is tapped" = "Při dotyku obrazovky";
