--- a/src/Catty/Resources/Localization/el.lproj/Localizable.strings
+++ b/src/Catty/Resources/Localization/el.lproj/Localizable.strings
@@ -1817,7 +1817,7 @@
 "When background changes to" = "Όταν το φόντο αλλάξει σε";
 
 /* No comment provided by engineer. */
-"When project started" = "When project started";
+"When project starts" = "When project starts";
 
 /* No comment provided by engineer. */
 "When stage is tapped" = "When stage is tapped";
