--- a/src/Catty/Resources/Localization/ko.lproj/Localizable.strings
+++ b/src/Catty/Resources/Localization/ko.lproj/Localizable.strings
@@ -1817,7 +1817,7 @@
 "When background changes to" = "배경이 바뀔 때";
 
 /* No comment provided by engineer. */
-"When project started" = "프로그램을 시작할 때";
+"When project starts" = "프로그램을 시작할 때";
 
 /* No comment provided by engineer. */
 "When stage is tapped" = "화면을 터치할 때";
